--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,9 +1,9 @@
 .page-header
-  = link_to functions_path, class: 'btn btn-default' do 
+  = link_to teams_path, class: 'btn btn-default' do 
     span.glyphicon.glyphicon-list-alt
     |  Back 
   h1
     | New 
-    | function
+    | team
 
 = render 'form'
