add teams to roles, add subteams, drop functions, add some navigation between groups and teams.

--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,14 +1,16 @@
 .page-header
-  = link_to groups_path, class: 'btn btn-default' do 
+  = link_to groups_path, class: 'btn btn-default' do
     span.glyphicon.glyphicon-list-alt
-    |  Back 
-  = link_to edit_group_path(@group), class: 'btn btn-primary' do 
+    |  Back
+  = link_to edit_group_path(@group), title: "Edit",class: 'btn btn-primary' do
     span.glyphicon.glyphicon-pencil
-    |  Edit 
-  h1
-    | Show group
-dl.dl-horizontal
-  dt
-    | Name:
-  dd
-    = @group.name
+  = link_to @group, class: 'btn btn-danger', title: "Destroy!", method: :delete, data: { confirm: 'Really destroy this group?' } do
+    span.glyphicon.glyphicon-trash
+  end
+  h3 =link_to :Groups, groups_path
+  h1 #{@group.name}
+  h2 teams
+  ul
+    - @group.teams.each do |team|
+      li =link_to team.name, team
+= render partial: "roles/list", locals: {roles: @group.roles.page(params[:page])}
