--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -1,27 +1,19 @@
 .page-header
-  = link_to new_group_path, class: 'btn btn-primary' do 
+  = link_to new_group_path, class: 'btn btn-primary' do
     span.glyphicon.glyphicon-plus
     |  New Group
-  h1
-    | Listing groups
+  h1 Business Groups
 
 .table-responsive
   table.table.table-striped.table-bordered.table-hover
     thead
       tr
-        th
-          | Name
-        th
-        th
-        th
+        th Name
+        th Teams
+        th Roles
     tbody
       - @groups.each do | group |
         tr
-          td
-            = group.name
-          td
-            = link_to 'Show', group
-          td
-            = link_to 'Edit', edit_group_path(group) 
-          td
-            = link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } 
+          td = link_to group.name, group
+          td =group.teams.count
+          td =group.roles.count
