--- a/app/views/teams/index.html.slim
+++ b/app/views/teams/index.html.slim
@@ -1,5 +1,5 @@
 .page-header
-  = link_to new_team_path, class: 'btn btn-primary' do 
+  = link_to new_team_path, class: 'btn btn-primary' do
     span.glyphicon.glyphicon-plus
     |  New Team
   h1
@@ -13,19 +13,10 @@
           | Name
         th
           | Group
-        th
-        th
-        th
     tbody
       - @teams.each do | team |
         tr
           td
-            = team.name
+            =link_to team.name, team
           td
-            = team.group
-          td
-            = link_to 'Show', team
-          td
-            = link_to 'Edit', edit_team_path(team) 
-          td
-            = link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } 
+            = team.group.name
