--- a/app/views/roles/_list.html.slim
+++ b/app/views/roles/_list.html.slim
@@ -6,13 +6,13 @@
         th Group
         th Team
         th Sub Team
-        th Name
+        /th Name
         th Title
         th Number
         th Type
-        th Start Date
-        th End Date
-        /th Monthly cost
+        /th Start Date
+          th End Date
+          /th Monthly cost
         th Apr
         th May
         th Jun
@@ -37,12 +37,12 @@
           td = link_to role.group.name, role.group
           td = link_to role.team.name, role.team
           td = role.sub_team
-          td = role.name
+          /td = role.name
           td = role.title
           td = role.staff_number
           td = role.role_type
-          td =role.start_date.strftime("%h %Y") unless role.start_date.nil?
-          td =role.end_date.strftime("%h %Y") unless role.end_date.nil?
+          /td =role.start_date.strftime("%h %Y") unless role.start_date.nil?
+          /td =role.end_date.strftime("%h %Y") unless role.end_date.nil?
           /
             td
               = humanized_money_with_symbol role.monthly_cost
