--- a/app/views/teams/index.html.slim
+++ b/app/views/teams/index.html.slim
@@ -19,4 +19,4 @@
           td
             =link_to team.name, team
           td
-            = team.group.name
+            = link_to team.group.name, team.group
