--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -54,5 +54,5 @@ html
             span.sr-only
               | Close
           = msg
-      h3 Signed in as #{session['name']}
+      /h3 Signed in as #{session['name']}
       = yield
