--- a/app/views/roles/index.html.slim
+++ b/app/views/roles/index.html.slim
@@ -1,12 +1,19 @@
-.page-header
-  h2
-    =link_to "Vacant Roles", vacant_roles_path
-  h1 Roles
-  = form_tag import_roles_path, multipart: true, class: "form-inline" do
-    = link_to new_role_path, class: 'btn btn-primary' do
-      span.glyphicon.glyphicon-plus
-      |  New Role
-    .form-group
-      =file_field_tag :file, :class=>"form-control"
-    =submit_tag "Import", :class=>"btn btn-primary"
+.row
+    .col-md-12
+      h2 =link_to "Vacant Roles", vacant_roles_path
+      h1 Roles
+      - if params[:team] || params[:title]
+        h2 Filtered by
+      - if params[:team]
+        h3 Team: #{Team.find_by_id(params[:team].to_i).name}
+      - if params[:title]
+        h3 Titles containing: #{params[:title]}
 =render partial: "list", locals: {roles: @roles}
+
+= form_tag import_roles_path, multipart: true, class: "form-inline" do
+  = link_to new_role_path, class: 'btn btn-primary' do
+    span.glyphicon.glyphicon-plus
+    |  New Role
+  .form-group
+    =file_field_tag :file, :class=>"form-control"
+  =submit_tag "Import", :class=>"btn btn-primary"
