numerous fixes to allow 16/17 data to be imported and include total cost.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -1,7 +1,26 @@
 .vacancy
-  background-color:  #f66 !important
+  background-color:  #ffa !important
 
-.biggies
-  a
-    font-size: 4rem
-    
+
+.slug
+  padding: 1px 2rem
+  height: 30rem
+  display: block
+  border-radius: .5rem
+  background: #eee
+  box-shadow: 1px 1px 5px #555
+  cursor: pointer
+
+  h2
+    height: 7.5rem
+    border-bottom: 1px solid #ccc
+
+  ul
+    padding-left: 0
+    li
+      list-style-type: none
+      font-size: 2rem
+      padding-left: 0
+
+.slug:hover
+  background-color: #ddd
