--- a/app/views/roles/index.html.slim
+++ b/app/views/roles/index.html.slim
@@ -1,6 +1,6 @@
 .row
     .col-md-12
-      h2 =link_to "Vacant Roles", vacant_roles_path
+      /h2 =link_to "Vacant Roles", vacant_roles_path
       h1 Roles
       - if params[:team] || params[:title]
         h2 Filtered by
