--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,17 +1,5 @@
-.page-header
-  h1 Welcome
-  /= link_to "Sign in", "/auth/google_oauth2"
-
-.row.biggies
-  .col-md-3
-    =link_to "#{Group.count} Groups", groups_path, {:class=>"btn btn-primary"}
-  .col-md-3
-    =link_to "#{Team.count} Teams", teams_path, {:class=>"btn btn-primary"}
-  .col-md-3
-    /=#link_to "#{Role.all.map{|r| r.send(Time.now.strftime("%h").downcase).to_i}.sum} People", roles_path, {:class=>"btn btn-primary"}
-    /#=link_to "#{Role.vacant.map{|r| r.send((Time.now + 3.months).strftime("%h").downcase).to_i}.sum} Vacancies", roles_path, {:class=>"btn btn-primary"}
-    =link_to "#{Role.vacant.map{|r| r.mar.to_i}.sum} Vacancies", vacant_roles_path, {:class=>"btn btn-primary"}
-
 .row
   .col-md-12
-    h2 Data Purity (Checks)
+    .page-header
+      h1 GDS Business Planning Portal
+      /= link_to "Sign in", "/auth/google_oauth2"
