--- a/app/views/roles/_list.html.slim
+++ b/app/views/roles/_list.html.slim
@@ -10,8 +10,10 @@
             th Sub Team
             /th Name
             th Title
-            th Number
+            th Staff Number
             th Type
+            th Monthly cost
+            th Total cost
             /th Start Date
               th End Date
               /th Monthly cost
@@ -35,23 +37,22 @@
               th
         tbody
           - roles.each do | role |
-            tr class="#{(role.name.match(/vac/i) && params[:scope] != 'vacant') ? 'vacancy' : ''}"
+            tr class="#{(role.staff_number.match(/vac/i) && params[:scope] != 'vacant') ? 'vacancy' : ''}"
               td = link_to role.group.name, role.group
               /td = link_to role.team.name, role.team
               td = link_to role.team.name, roles_path(team: role.team)
               td = role.sub_team
               /td = role.name
-              td = link_to role.title, roles_path(:title=>role.title)
-              td = role.staff_number.gsub(/(.+?),\s+/,'')
+              td = link_to role.title.to_s, roles_path(:title=>role.title)
+              td = role.staff_number.gsub(/.+?-\s+/,'')
+              /only firstname & number
+              /td = role.staff_number.gsub(/(.+?),\s+/,'')
               td = role.role_type
               /td =role.start_date.strftime("%h %Y") unless role.start_date.nil?
               /td =role.end_date.strftime("%h %Y") unless role.end_date.nil?
-              /
-                td
-                  = humanized_money_with_symbol role.monthly_cost
-                  //hide rate for now
-                  /| £XXXX
-              - %w(apr may jun jul aug sep oct nov dec jan feb mar).each do |m|
+              td = humanized_money_with_symbol role.monthly_cost
+              td = humanized_money_with_symbol role.total_cost
+              - Role.MONTH_NAMES.each do |m|
                 td.amount
                   =role.send(m)
 
