--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -7,7 +7,7 @@
 
 .row
   - Group.all.order(:name).each do |group|
-    .col-md-3
+    .col-xs-6
       .slug onclick="document.location='#{group_path(group)}'"
         h2 =link_to group.name, group
         ul
