--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -3,8 +3,10 @@
     = link_to new_group_path, class: 'btn btn-primary' do
       span.glyphicon.glyphicon-plus
       |  New Group
-  h1 Business Groups
-
+  h1 GDS Dashboard
+  h3 #{Role.count} Roles
+  h3 #{Role.pluck(:staff_number).uniq.count} Unique staff numbers
+  h3 =link_to Role.vacant.count.to_s + " Vacancies", roles_path(filter_vacant: true)
 .row
   - Group.all.order(:name).each do |group|
     .col-xs-6
