--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -1,14 +1,18 @@
+
 .page-header
-  = link_to groups_path, class: 'btn btn-default' do
-    span.glyphicon.glyphicon-list-alt
-    |  Back
-  = link_to edit_group_path(@group), title: "Edit",class: 'btn btn-primary' do
-    span.glyphicon.glyphicon-pencil
-  = link_to @group, class: 'btn btn-danger', title: "Destroy!", method: :delete, data: { confirm: 'Really destroy this group?' } do
-    span.glyphicon.glyphicon-trash
-  end
-  h3 =link_to :Groups, groups_path
-  h1 #{@group.name}
+  /
+    = link_to groups_path, class: 'btn btn-default' do
+      span.glyphicon.glyphicon-list-alt
+      |  Back
+    = link_to edit_group_path(@group), title: "Edit",class: 'btn btn-primary' do
+      span.glyphicon.glyphicon-pencil
+    = link_to @group, class: 'btn btn-danger', title: "Destroy!", method: :delete, data: { confirm: 'Really destroy this group?' } do
+      span.glyphicon.glyphicon-trash
+    end
+  h1
+    =link_to "Group:", groups_path
+    |&nbsp;
+    = @group.name
   ul.list-unstyled
     li #{@group.roles.count} Roles
     li #{@group.roles.collect{|r| r.staff_number}.uniq.count} uniquely identified people
