--- a/app/views/teams/show.html.slim
+++ b/app/views/teams/show.html.slim
@@ -1,5 +1,5 @@
 .page-header
-  = link_to teams_path, class: 'btn btn-default' do
+  /= link_to teams_path, class: 'btn btn-default' do
     span.glyphicon.glyphicon-list-alt
     |  Back
   /
