--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -15,12 +15,12 @@ dl.dl-horizontal
   dt
     | Team:
   dd
-    = begin @goal.team.name rescue "" end
+    = @goal.team_name
   dt
     | Group:
   dd
-    = begin @goal.group.name rescue "" end
+    = @goal.group_name
   dt
     | Parent goal:
   dd
-    = @goal.parent_goal_id
+    = @goal.parent_goal_name
