formatting, and rediretion after creating/editing, pluralisation on front page, etc.

--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -15,7 +15,7 @@
       .slug onclick="document.location='#{group_path(group)}'"
         h2 =link_to group.name, group
         ul
-          li #{group.goals.count} Goals
+          li = pluralize group.goals.count, "Goal"
           li &nbsp;
           li #{group.roles.count} Roles
           li #{group.unique_numbers.count} Unique People
