add new associations and ability to add sub goals, assign goals to groups or teams, and rendering niceness.

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -18,12 +18,25 @@
     height: 7.5rem
     border-bottom: 1px solid #ccc
 
+
   ul
     padding-left: 0
     li
       list-style-type: none
       font-size: 2rem
       padding-left: 0
+
+ol.sub_goal
+  margin-top: 2rem
+  li
+    font-size: 2.5rem
+    font-weight: 600
+    margin-bottom: 2rem
+    small
+      color: #555
+      font-size: 1.5
+      font-weight: 400
+      display: block
 
 .slug:hover
   background-color: #ddd
